[package]
name = "pallet_trust"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "5.0", default-features = false }
frame-system = { version = "5.0", default-features = false }
sp-runtime = { version = "5.0", default-features = false }
sp-core = { version = "5.0", default-features = false }
scale-info = { version = "2.0", default-features = false }
xcm = { version = "0.15", default-features = false }
